--- a/LoonLakeSurf copy/LoonLakeLandingPageW3.html
+++ b/LoonLakeSurf copy/LoonLakeLandingPageW3.html
@@ -9,6 +9,14 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
+    .byob {
+        text-align: center;
+        margin: 4em;
+    }
+    .deuce {
+        max-height: 575px;
+        max-width: 290px;
+    }
     .opi {
         background-color: lightgrey;
         opacity: .98;
@@ -76,10 +84,6 @@
     h3 {
         text-align: center;
     }
-    p {
-        text-align: center;
-        padding-left: 4em;
-    }
     #aboutPic {
         height: 25em;
         width: auto;
@@ -129,13 +133,13 @@
     
     <div class="carousel-inner" role="listbox">
         <div class="item active imgSize">
-            <img class="imgSize" src="pexels-photo.jpg">
+            <img class="imgSize" src="SurfPics/pexels-photo.jpg">
         </div>
         <div class="item imgSize">
-            <img class="imgSize" src="pexels-photo-butt.jpg">
+            <img class="imgSize" src="SurfPics/pexels-photo-butt.jpg">
         </div>
         <div class="item imgSize">
-            <img class="imgSize" src="pexels-photo-sunset.jpeg">
+            <img class="imgSize" src="SurfPics/pexels-photo-sunset.jpeg">
         </div>
         <div class="item imgSize">
             <img class="imgSize" src="SurfPics/Carousel/ktSunset.JPG">
@@ -153,17 +157,17 @@
         <div class="row">
             <div class="col-xs-4 col-md-3 poopDeckLeft">
                 <a href="#" class="thumbnail">
-                    <img id="barrelRider" src="SurfPics/Boards/bambooBlack.jpg" data-other-src="SurfPics/Boards/barrelRiderBack.jpg">
-                    <div class="caption">
-                        <h4>Bamboo Barrel Rider 4'11</h4>
+                    <img id="barrelRider" src="SurfPics/Boards/badger1%202.png" data-other-src="SurfPics/Boards/badger2.png" class="deuce">
+                    <div class="caption price">
+                        <h4>Honey Badger 4'11</h4>
                         <p>$1 Million</p>
                     </div>
                 </a>
             </div>
             <div class="col-xs-4 col-md-3 poopDeckCenter">
                 <a href="#" class="thumbnail">
-                    <img id="whiteLightning" data-other-src="SurfPics/Boards/whiteLightningBack.jpg" src="SurfPics/Boards/whiteLighting.jpg">
-                    <div class="caption">
+                    <img id="whiteLightning" data-other-src="SurfPics/Boards/gecko1.png" src="SurfPics/Boards/gecko2.png" class="deuce">
+                    <div class="caption price">
                         <h4>White Lighting 4'8</h4>
                         <p>$1 Million</p>
                     </div>
@@ -171,9 +175,12 @@
             </div>
             <div class="col-xs-4 col-md-3 poopDeckRight">
                 <a href="#" class="thumbnail">
-                    <img id="mcSurfface" data-other-src="SurfPics/Boards/mcSurffaceBack.jpg" src="SurfPics/Boards/surfyMcSurfFace.jpg">
+                    <img id="mcSurfface" data-other-src="SurfPics/Boards/customBoard.png" src="SurfPics/Boards/customBoard.png" class="deuce">
+                    <div class="w3-container w3-display-middle">
+                        <h3>Create your own</h3>
+                    </div>
                     <div class="caption">
-                        <h4>Surfy McSurf-Face 5'6</h4>
+                        <h4>Surfy McSurf-Face</h4>
                         <p>$1 Million</p>
                     </div>
                 </a>
@@ -192,7 +199,7 @@
                 </div>
                 <div class="col-xs-6 col-md-6">
                     <h3>The Boys Behind The Boards</h3>
-                    <p>"We're Just a couple of home-grown Minnesota boys with a passion for boards, babes, and beers."</p>
+                    <p class="byob">"We're Just a couple of home-grown Minnesota boys with a passion for boards, babes, and beers."</p>
                     <p><b>Justin Conner</b> is board building maverick whose gnarly shredding abilities match his insane God-given talent for craftmanship. He discovered his passion for engineering while building the arc for Noah. (He also built all of the surf boards used by Noah and his family during the flood but the Bible never talks about that.) Since then he has been the mastermind behind the Trojan Horse, the Parthenon, and Apollo 11. Lucky for you he has decided to put all of that begginer shit behind to build top of the line wakesurf boards for you!</p>
                     <p><b>Evan Allen </b>was both born<em> and </em>concieved on while surfing. True story. Seriously if you don't believe me google it. I fucking dare you. Anyway Evan put his big wave dreams on hold to play quaterback for the University of Wisconsin where he won All-American honors. After blowing out his knee in the Rose Bowl he chose to join the FBI under the pseudonym Johnny Utah. He achieved national fame when he infiltrated and brought a gang of surfing bank robbers. This imfamous case was of course the inspiration for the movie Point Break. Now retired from the FBI Evan spends most of his time shredding waves, building boards, and writing such eloquent code that it is often compared to the works of Shakespear and Henry David Thoreau.</p>
                 </div>
