--- a/LoonLakeSurf copy/LoonLakeLandingPageW3.html
+++ b/LoonLakeSurf copy/LoonLakeLandingPageW3.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--TODO: 1. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
 <html>
 <title>Loon Lake W3</title>
 <meta charset="utf-8">
