--- a/LoonLakeSurf copy/LoonLakeLandingPageW3.html
+++ b/LoonLakeSurf copy/LoonLakeLandingPageW3.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<!--TODO: 1. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
+<!--TODO: 1. Add learn how to use github and add/edit code (there is a tutorial on the website)
+2. Add your nav bar.
+3. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
 <html>
 <title>Loon Lake W3</title>
 <meta charset="utf-8">
