--- a/LoonLakeSurf copy/LoonLakeLandingPageW3.html
+++ b/LoonLakeSurf copy/LoonLakeLandingPageW3.html
@@ -2,6 +2,16 @@
 <!--TODO-Justin: 1. Add learn how to use github and add/edit code (there is a tutorial on the website)
 2. Add your nav bar.
 3. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
+
+<!--TODO-Evan: 1. Upgrade all headings.
+2. Upgrade form and add message.
+3. Figure out backend.
+4. Add a division that covers the divide between the carousel and the rest of the body. -->
+
+<!--TODO-Team: 1. Get it hosted?
+2. Make and underconstruction page?
+3. Make a separate .CSS to allow for scalability later? -->
+
 <html>
 <title>Loon Lake W3</title>
 <meta charset="utf-8">
