--- a/LoonLakeSurf copy/LoonLakeLandingPageW3.html
+++ b/LoonLakeSurf copy/LoonLakeLandingPageW3.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<!--TODO-Justin: 1. Add learn how to use github and add/edit code (there is a tutorial on the website)
-2. Add your nav bar.
-3. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
+<!--TODO-Justin: 
+1. Decide how you want the about section formated, who and what you want featured (the company? people? both?), and then write the bio-->
 
 <!--TODO-Evan: 1. Upgrade all headings.
 2. Upgrade form and add message.
